<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/drag_line_layout"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        android:layout_marginHorizontal="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/item_line_grey"
            />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_header"
        style="@style/Text.Header.DialogHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_book"
        app:layout_constraintTop_toBottomOf="@id/drag_line_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        android:hint="@string/hint_book_name"
        app:startIconDrawable="@drawable/icon_book"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/book_name_input_layout"
        android:hint="@string/hint_date"
        app:startIconDrawable="@drawable/icon_calendar"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teacher_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_input_layout"
        android:hint="@string/hint_teacher_name"
        app:startIconDrawable="@drawable/icon_teacher"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teacher_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/teacher_name_input_layout"
        android:hint="@string/hint_user_name"
        app:startIconDrawable="@drawable/icon_person"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_input_layout"
        app:layout_constraintStart_toStartOf="@id/user_name_input_layout"
        app:layout_constraintEnd_toEndOf="@id/user_name_input_layout"
        android:text="@string/add_book_button"
        style="@style/Button.BottomButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>