<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/text_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_header"
        app:srcCompat="@drawable/icon_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_header"
        style="@style/Text.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_book"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/divider_header"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@id/text_header"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/text_header">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/line_black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_header"
        android:layout_margin="15dp"
        android:hint="@string/hint_book_name"
        app:startIconDrawable="@drawable/icon_book"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/book_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/book_name_input_layout"
        android:layout_margin="15dp"
        android:hint="@string/hint_date"
        app:startIconDrawable="@drawable/icon_calendar"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teacher_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_input_layout"
        android:layout_margin="15dp"
        android:hint="@string/hint_teacher_name"
        app:startIconDrawable="@drawable/icon_teacher"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teacher_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/teacher_name_input_layout"
        android:layout_margin="15dp"
        android:hint="@string/hint_user_name"
        app:startIconDrawable="@drawable/icon_person"
        style="@style/TextField"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/user_name_input_layout"
        app:layout_constraintStart_toStartOf="@id/user_name_input_layout"
        app:layout_constraintEnd_toEndOf="@id/user_name_input_layout"
        android:text="ready"
        />

</androidx.constraintlayout.widget.ConstraintLayout>